--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                                     <a href="focus.html" class="focus__link">
                                         <img src="./img/d_v_01_img.jpg" class="img-fluid" />
                                     </a>
-                                    <div class="focus__name"> <a href="focus.html">紹琪實業股份有限公司</a><br>&nbsp;</div>
+                                    <div class="focus__name"><a href="focus.html">紹琪實業股份有限公司</a></div>
                                     <!--<div class="focus__no">攤位號碼：AA001</div>-->
                                 </div>
 
