--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
                 </div>
             </section>
             <!-- banner -->
-           <!-- <section class="banner">
+           <section class="banner">
                 <div class="container">
                     <a href="#">
                         <img src="./img/banner.jpg" class="img-fluid" />
                     </a>
                 </div>
-            </section>-->
+            </section>
             <!-- 產業新聞 -->
             <section class="news">
                 <div class="container">
