--- a/index.html
+++ b/index.html
@@ -280,10 +280,11 @@
             </section>
         </main>
 
-        <!-- footer -->
-        <footer class="footer">
-            <div class="container">
-                <div class="row">
+            <!-- footer -->
+            <footer class="footer">
+                <div class="container">
+                    <div class="row justify-content-between">
+
                     <div class="col-5">
                         <div class="footer__title">主辦單位：
                             <a href="https://www.taitra.org.tw/" class="footer__item" title="中華民國對外貿易發展協會"><img
