--- a/index_en.html
+++ b/index_en.html
@@ -31,10 +31,11 @@
 
                         <div class="nav__tools">
                             <a href="//www.facebook.com/taiwanwatershow/" title="Facebook" target="_blank"><img
-                                src="./img/icon_facebook.svg" /></a>
+                                    src="./img/icon_facebook.svg" /></a>
                             <a href="//www.linkedin.com/company/31086045/admin/" title="Linkedin" target="_blank"><img
-                                src="./img/icon_linkedin.svg" /></a>
-                            <a href="//twitter.com/TaiwanWeek" title="Twitter" target="_blank"><img src="./img/icon_twitter.svg" /></a>
+                                    src="./img/icon_linkedin.svg" /></a>
+                            <a href="//twitter.com/TaiwanWeek" title="Twitter" target="_blank"><img
+                                    src="./img/icon_twitter.svg" /></a>
                         </div>
                     </div>
 
@@ -49,13 +50,19 @@
                                     href="//www.taiwanintlwaterweek.com/en/menu/0310452A3038CE62D0636733C6861689/info.html"
                                     title="E-Newsletter">E-Newsletter</a></li>
                             <li class="nav-item"><a class="nav-link" href="index_en.html" title="Home">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="info_en.html" title="Show News">Show News</a></li>
-                            <li class="nav-item"><a class="nav-link" href="topic_en.html" title="Show Topic">Show Topic</a></li>
-                            <li class="nav-item"><a class="nav-link" href="news_en.html" title="Industry News">Industry News</a></li>
-                            <li class="nav-item"><a class="nav-link" href="focus_en.html" title="Exhibitor Info">Exhibitor Info</a></li>
+                            <li class="nav-item"><a class="nav-link" href="info_en.html" title="Show News">Show News</a>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="topic_en.html" title="Show Topic">Show
+                                    Topic</a></li>
+                            <li class="nav-item"><a class="nav-link" href="news_en.html" title="Industry News">Industry
+                                    News</a></li>
+                            <li class="nav-item"><a class="nav-link" href="focus_en.html"
+                                    title="Exhibitor Info">Exhibitor Info</a></li>
                         </ul>
 
-                        <div class="header__slogan_en">Water Transport<span style="font-weight: 300">/</span>Purification<span style="font-weight: 300">/</span><br>Sustainable Water Development</div>
+                        <div class="header__slogan_en">Water Transport<span
+                                style="font-weight: 300">/</span>Purification<span
+                                style="font-weight: 300">/</span><br>Sustainable Water Development</div>
                         <div class="header__date">2023.09.20-22</div>
                         <div class="header__location">TWTC HALL 1</div>
                         <div class="header__slogan-en">Every Drop Matters!</div>
@@ -79,12 +86,24 @@
                     <div class="row justify-content-end">
                         <div class="col-9">
                             <div class="info__subtitle">
-                                Overcoming drought stress:<br>Participate in TIWW 2023 to locate new Business opportunities for drought relief
+                                Overcoming drought stress:<br>Participate in TIWW 2023 to locate new Business
+                                opportunities for drought relief
                             </div>
                             <div class="info__box">
                                 <div class="info__data">
                                     <div class="info__text">
-                                        In 2021, Taiwan experienced the drought of the century. To this day, people still remember how water rationing inflicted huge loss in daily life activities, industries, and farmland. However, as climate change intensifies, water shortage in Taiwan may further worsen in the foreseeable future. According to statistics, precipitation in Taiwan this spring reached the lowest point in 20 years, and no typhoon has made landfall on this island for 3 years and 8 months. Besides, the precipitation in the southern region has dropped to less than 40% of the previous average rainfall with no record of heavy rain for more than 600 days. The Water Resources Agency (WRA) of the Ministry of Economic Affairs pointed out that this year's drought in southern Taiwan may be worse than the drought of the century in 2021. Meteorologists have also warned that, drought may hit Taiwan every two to three years in the future.
+                                        In 2021, Taiwan experienced the drought of the century. To this day, people
+                                        still remember how water rationing inflicted huge loss in daily life activities,
+                                        industries, and farmland. However, as climate change intensifies, water shortage
+                                        in Taiwan may further worsen in the foreseeable future. According to statistics,
+                                        precipitation in Taiwan this spring reached the lowest point in 20 years, and no
+                                        typhoon has made landfall on this island for 3 years and 8 months. Besides, the
+                                        precipitation in the southern region has dropped to less than 40% of the
+                                        previous average rainfall with no record of heavy rain for more than 600 days.
+                                        The Water Resources Agency (WRA) of the Ministry of Economic Affairs pointed out
+                                        that this year's drought in southern Taiwan may be worse than the drought of the
+                                        century in 2021. Meteorologists have also warned that, drought may hit Taiwan
+                                        every two to three years in the future.
                                     </div>
                                     <a href="info_en.html" class="btn btn__more-b">READ MORE</a>
                                 </div>
@@ -128,7 +147,7 @@
                 </div>
             </section>
             <!-- banner -->
-           <!-- <section class="banner">
+            <!-- <section class="banner">
                 <div class="container">
                     <a href="#">
                         <img src="./img/banner.jpg" class="img-fluid" />
@@ -152,7 +171,11 @@
                                         </div>
                                         <div class="news__data">
                                             <div class="news__text_en">
-                                                New study finds unsustainable human use has led to more than half of the largest lakes drying up around the world. More than half of the world's large lakes and reservoirs have shrunk since the early 1990s, chiefly because of climate change, intensifying concerns about water for agriculture, hydropower and human consumption, a new study has found.
+                                                New study finds unsustainable human use has led to more than half of the
+                                                largest lakes drying up around the world. More than half of the world's
+                                                large lakes and reservoirs have shrunk since the early 1990s, chiefly
+                                                because of climate change, intensifying concerns about water for
+                                                agriculture, hydropower and human consumption, a new study has found.
                                             </div>
                                             <a href="news_en.html" class="btn btn__more-w">READ MORE</a>
                                         </div>
@@ -160,11 +183,17 @@
                                 </div>
                                 <div class="col-6">
                                     <div class="news__item">
-                                        <div class="news__subtitle">From the sea and from land: the new ways to avoid being left without water
+                                        <div class="news__subtitle">From the sea and from land: the new ways to avoid
+                                            being left without water
                                         </div>
                                         <div class="news__data">
                                             <div class="news__text_en">
-                                                Three out of four people in the world have access to safely managed drinking water. Announced by the World Bank in 2020, it's an encouraging number given that 20 years ago only 62 percent of the world's population had access to a safe water source free from contamination, improved by a pipe, a drilled well or a readily available local well. Today that number has risen to 74 percent.
+                                                Three out of four people in the world have access to safely managed
+                                                drinking water. Announced by the World Bank in 2020, it's an encouraging
+                                                number given that 20 years ago only 62 percent of the world's population
+                                                had access to a safe water source free from contamination, improved by a
+                                                pipe, a drilled well or a readily available local well. Today that
+                                                number has risen to 74 percent.
                                             </div>
                                             <a href="news_2_en.html" class="btn btn__more-w">READ MORE</a>
                                         </div>
@@ -220,7 +249,8 @@
                                     <a href="focus_en.html" class="focus__link">
                                         <img src="./img/d_v_01_img.jpg" class="img-fluid" />
                                     </a>
-                                    <div class="focus__name"> <a href="focus_en.html">Shao Chi Enterprise Co., Ltd</a><br>&nbsp;</div>
+                                    <div class="focus__name"> <a href="focus_en.html">Shao Chi Enterprise Co.,
+                                            Ltd</a><br>&nbsp;</div>
                                     <!--<div class="focus__no">攤位號碼：AA001</div>-->
                                 </div>
 
@@ -228,7 +258,8 @@
                                     <a href="focus_2_en.html" class="focus__link">
                                         <img src="./img/d_v_02_img.jpg" class="img-fluid" />
                                     </a>
-                                    <div class="focus__name"><a href="focus_2_en.html">StreaMing International Trading Co., Ltd</a></div>
+                                    <div class="focus__name"><a href="focus_2_en.html">StreaMing International Trading
+                                            Co., Ltd</a></div>
                                     <!--<div class="focus__no">攤位號碼：AA001</div>-->
                                 </div>
 
@@ -236,18 +267,20 @@
                                     <a href="focus_3_en.html" class="focus__link">
                                         <img src="./img/d_v_03_img.jpg" class="img-fluid" />
                                     </a>
-                                    <div class="focus__name"><a href="focus_3_en.html">Ge Mao Rubber Industrial Co., Ltd.</a><br>&nbsp;</div>
+                                    <div class="focus__name"><a href="focus_3_en.html">Ge Mao Rubber Industrial Co.,
+                                            Ltd.</a><br>&nbsp;</div>
                                     <!--<div class="focus__no">攤位號碼：AA001</div>-->
                                 </div>
                             </div>
 
-                           <!-- 2 -->
+                            <!-- 2 -->
                             <div class="focus__col-box">
                                 <div class="focus__col">
                                     <a href="focus_4_en.html" class="focus__link">
                                         <img src="./img/d_v_04_img.jpg" class="img-fluid" />
                                     </a>
-                                    <div class="focus__name"><a href="focus_4_en.html">Leestone Engineering & Mercantile Co., Ltd.</a></div>
+                                    <div class="focus__name"><a href="focus_4_en.html">Leestone Engineering & Mercantile
+                                            Co., Ltd.</a></div>
                                     <!--<div class="focus__no">攤位號碼：AA001</div>-->
                                 </div>
 
@@ -255,7 +288,8 @@
                                     <a href="focus_5_en.html" class="focus__link">
                                         <img src="./img/d_v_05_img.jpg" class="img-fluid" />
                                     </a>
-                                    <div class="focus__name"><a href="focus_5_en.html">Industrial Technology Research Institute</a></div>
+                                    <div class="focus__name"><a href="focus_5_en.html">Industrial Technology Research
+                                            Institute</a></div>
                                     <!--<div class="focus__no">攤位號碼：AA001</div>-->
                                 </div>
                             </div>
@@ -280,14 +314,15 @@
             </section>
         </main>
 
-        <!-- footer -->
-        <footer class="footer">
-            <div class="container">
-                <div class="row">
+            <!-- footer -->
+            <footer class="footer">
+                <div class="container">
+                    <div class="row justify-content-between">
+
                     <div class="col-5">
                         <div class="footer__title">Organizer：
-                            <a href="https://www.taitra.org.tw/en/Default.aspx" class="footer__item" title="TAITRA" target="_blank"><img
-                                    src="./img/logo_tetdc.svg" /></a>
+                            <a href="https://www.taitra.org.tw/en/Default.aspx" class="footer__item" title="TAITRA"
+                                target="_blank"><img src="./img/logo_tetdc.svg" /></a>
                         </div>
                     </div>
 
