--- a/news_en.html
+++ b/news_en.html
@@ -165,10 +165,11 @@
 
         </main>
 
-        <!-- footer -->
-        <footer class="footer">
-            <div class="container">
-                <div class="row">
+            <!-- footer -->
+            <footer class="footer">
+                <div class="container">
+                    <div class="row justify-content-between">
+
                     <div class="col-5">
                         <div class="footer__title">Organizer：
                             <a href="https://www.taitra.org.tw/en/Default.aspx" class="footer__item" title="TAITRA" target="_blank"><img
