--- a/focus_2.html
+++ b/focus_2.html
@@ -31,16 +31,17 @@
 
                         <div class="nav__tools">
                             <a href="//www.facebook.com/taiwanwatershow/" title="Facebook" target="_blank"><img
-                                src="./img/icon_facebook.png" /></a>
+                                    src="./img/icon_facebook.png" /></a>
                             <a href="//www.linkedin.com/company/31086045/admin/" title="Linkedin" target="_blank"><img
-                                src="./img/icon_linkedin.png" /></a>
-                            <a href="//twitter.com/TaiwanWeek" title="Twitter" target="_blank"><img src="./img/icon_twitter.png" /></a>
+                                    src="./img/icon_linkedin.png" /></a>
+                            <a href="//twitter.com/TaiwanWeek" title="Twitter" target="_blank"><img
+                                    src="./img/icon_twitter.png" /></a>
                         </div>
                     </div>
 
                     <div class="col-8 header__right">
                         <div class="header__no">電子報 VOL.01</div>
-                        <div class="header__en"><a  href="index_en.html" title="English">English</a>
+                        <div class="header__en"><a href="index_en.html" title="English">English</a>
                         </div>
 
                         <!-- nav -->
@@ -80,8 +81,8 @@
 
                             <div class="company">
                                 <div class="company__name">斯卓明國際貿易有限公司</div>
-                                <a href="https://www.twincn.com/item.aspx?no=89153491" target="_blank" class="company__link"
-                                    title="StreaMing International Trading">&nbsp;</a>
+                                <a href="https://www.twincn.com/item.aspx?no=89153491" target="_blank"
+                                    class="company__link" title="StreaMing International Trading">&nbsp;</a>
                                 <div class="company__area">
                                     <img src="./img/bullet_trans.svg" class="img-fluid" />
                                     輸送儲存與配件區
@@ -93,7 +94,8 @@
 
                             <div class="company__content">
                                 <div class="company__title-intro">公司簡介</div>
-                                <p>斯卓明國際貿易有限公司自成立以來，一直致力於提供新的技術和產品設計，包括各式閥類，如蝶閥、球塞閥等產品。透過不斷的研發，公司致力於提高產品在系統中的效能，同時確保產品具有更長的使用壽命、更省力的操作和更穩定的品質。</p>
+                                <p>斯卓明國際貿易有限公司自成立以來，一直致力於提供新的技術和產品設計，包括各式閥類，如蝶閥、球塞閥等產品。透過不斷的研發，公司致力於提高產品在系統中的效能，同時確保產品具有更長的使用壽命、更省力的操作和更穩定的品質。
+                                </p>
                             </div>
 
                             <div class="company__content">
@@ -103,22 +105,24 @@
                                     <!-- item 1 -->
                                     <li class="company__item">
                                         <div class="company__item-name">銹鋼偏心式蝶閥</div>
-                                        <p>本產品具有配管間距小、不占空間的特點，因此可應用於管道間，並滿足客戶的需求。此蝶閥使用分離式鐵氟龍閥座，並採用專利型的設計，具有閥座壓力補償功能，關閉功能極佳。</p>
-                                        <p>相較於傳統的包覆式蝶閥膠圈容易因膠圈變形而硬化，導致操作扭力增大而無法防止漏水，此產品的分離式鐵氟龍閥座避免了這樣的問題。此外，偏心式蝶閥的閥座可根據系統液體的適用性進行更換，並且可快速加裝斷熱材料，以符合冰水系統的防結露要求。</p>
+                                        <p>本產品具有配管間距小、不占空間的特點，因此可應用於管道間，並滿足客戶的需求。此蝶閥使用分離式鐵氟龍閥座，並採用專利型的設計，具有閥座壓力補償功能，關閉功能極佳。
+                                        </p>
+                                        <p>相較於傳統的包覆式蝶閥膠圈容易因膠圈變形而硬化，導致操作扭力增大而無法防止漏水，此產品的分離式鐵氟龍閥座避免了這樣的問題。此外，偏心式蝶閥的閥座可根據系統液體的適用性進行更換，並且可快速加裝斷熱材料，以符合冰水系統的防結露要求。
+                                        </p>
                                         <div class="company__item-box">
                                             <img src="./img/pd2_p01.jpg" class="company__item-img" />
                                             <div class="company__item-info">
-                                            <div class="company__item-title">特點：</div>
-                                            <ol>
-                                                <li>結構輕量化，方便安裝</li>
-                                                <li>優異的止漏功能</li>
-                                                <li>安全性高，設有制鎖裝置</li>
-                                                <li>閥座可更換，增加維修彈性</li>
-                                                <li>具有防結露功能，適用於冰水系統</li>
-                                            </ol>
+                                                <div class="company__item-title">特點：</div>
+                                                <ol>
+                                                    <li>結構輕量化，方便安裝</li>
+                                                    <li>優異的止漏功能</li>
+                                                    <li>安全性高，設有制鎖裝置</li>
+                                                    <li>閥座可更換，增加維修彈性</li>
+                                                    <li>具有防結露功能，適用於冰水系統</li>
+                                                </ol>
+                                            </div>
                                         </div>
-                                    </div>
-                                </li>
+                                    </li>
 
                                     <!-- item 2 -->
                                     <li class="company__item">
@@ -130,33 +134,35 @@
                                         <div class="company__item-box">
                                             <img src="./img/pd2_p02.jpg" class="company__item-img" />
                                             <div class="company__item-info">
-                                            <div class="company__item-title">特點：</div>
-                                            <ol>
-                                                <li>開關流體阻力小</li>
-                                                <li>氣密性高，扭力小</li>
-                                                <li>壓力落差小，擾流小</li>
-                                            </ol>
+                                                <div class="company__item-title">特點：</div>
+                                                <ol>
+                                                    <li>開關流體阻力小</li>
+                                                    <li>氣密性高，扭力小</li>
+                                                    <li>壓力落差小，擾流小</li>
+                                                </ol>
+                                            </div>
                                         </div>
-                                    </div>
-                                </li>
+                                    </li>
 
                                     <!-- item 3 -->
                                     <li class="company__item">
                                         <div class="company__item-name">砲金銅/不銹鋼減壓閥組</div>
-                                        <p>減壓閥是一種專門的閥門裝置，能夠自動地降低管路工作壓力，將閥前管路較高的水壓減少至閥後管路所需的水平。此產品廣泛應用於高層建築，以確保給水系統中各用水點都能獲得適當的服務水壓和流量。</p>
-                                        <p>由於水的漏失率和浪費程度幾乎與給水系統的水壓大小成正比，因此減壓閥在改善系統運行狀況和潛在節水方面發揮重要作用。此外，該產品可提供砲金銅或不銹鋼材質選擇。</p>
+                                        <p>減壓閥是一種專門的閥門裝置，能夠自動地降低管路工作壓力，將閥前管路較高的水壓減少至閥後管路所需的水平。此產品廣泛應用於高層建築，以確保給水系統中各用水點都能獲得適當的服務水壓和流量。
+                                        </p>
+                                        <p>由於水的漏失率和浪費程度幾乎與給水系統的水壓大小成正比，因此減壓閥在改善系統運行狀況和潛在節水方面發揮重要作用。此外，該產品可提供砲金銅或不銹鋼材質選擇。
+                                        </p>
                                         <div class="company__item-box">
                                             <img src="./img/pd2_p03.jpg" class="company__item-img" />
                                             <div class="company__item-info">
-                                            <div class="company__item-title">特點：</div>
-                                            <ol>
-                                                <li>具備強化尼龍絲和EPDM隔膜的內置設計。</li>
-                                                <li>具備不鏽鋼濾網的內置設計，以防止異物卡住閥座或損傷隔膜。</li>
-                                                <li>具有下置的緩衝彈簧，能夠減緩水錘沖擊壓力。</li>
-                                            </ol>
+                                                <div class="company__item-title">特點：</div>
+                                                <ol>
+                                                    <li>具備強化尼龍絲和EPDM隔膜的內置設計。</li>
+                                                    <li>具備不鏽鋼濾網的內置設計，以防止異物卡住閥座或損傷隔膜。</li>
+                                                    <li>具有下置的緩衝彈簧，能夠減緩水錘沖擊壓力。</li>
+                                                </ol>
+                                            </div>
                                         </div>
-                                    </div>
-                                </li>
+                                    </li>
 
 
 
@@ -184,7 +190,7 @@
             <!-- footer -->
             <footer class="footer">
                 <div class="container">
-                    <div class="row">
+                    <div class="row justify-content-between">
                         <div class="col-5">
                             <div class="footer__title">主辦單位：
                                 <a href="https://www.taitra.org.tw/" class="footer__item" title="中華民國對外貿易發展協會"><img
@@ -192,7 +198,7 @@
                             </div>
                         </div>
 
-                        <div class="col-7">
+                        <div class="col-5">
                             <div class="nav__tools">
                                 <a href="//www.facebook.com/taiwanwatershow/" title="Facebook"><img
                                         src="./img/icon_facebook.svg" /></a>
