--- a/focus_4.html
+++ b/focus_4.html
@@ -149,7 +149,8 @@
             <!-- footer -->
             <footer class="footer">
                 <div class="container">
-                    <div class="row">
+                    <div class="row justify-content-between">
+
                         <div class="col-5">
                             <div class="footer__title">主辦單位：
                                 <a href="https://www.taitra.org.tw/" class="footer__item" title="中華民國對外貿易發展協會"><img
