--- a/index_en.html
+++ b/index_en.html
@@ -19,7 +19,7 @@
     <div class="wrap">
 
         <!-- header -->
-        <header class="header header__kv">
+        <header class="header header__kv header-en">
             <div class="container">
                 <dvi class="row">
                     <div class="col-4 header__left">
@@ -60,7 +60,7 @@
                                     title="Exhibitor Info">Exhibitor Info</a></li>
                         </ul>
 
-                        <div class="header__slogan_en">Water Transport<span
+                        <div class="header__slogan">Water Transport<span
                                 style="font-weight: 300">/</span>Purification<span
                                 style="font-weight: 300">/</span><br>Sustainable Water Development</div>
                         <div class="header__date">2023.09.20-22</div>
