--- a/news_2_en.html
+++ b/news_2_en.html
@@ -19,7 +19,7 @@
     <div class="wrap">
 
         <!-- header -->
-        <header class="header">
+        <header class="header header-en">
             <div class="container">
                 <dvi class="row">
                     <div class="col-4 header__left">
